--- a/Przychodnia/MainWindow.xaml
+++ b/Przychodnia/MainWindow.xaml
@@ -8,16 +8,16 @@
         Title="Menu Glowne" Height="400" Width="500" FontSize="13" Background="#8B96D9">
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="18" HorizontalAlignment="Left" Height="80" Margin="121,21,0,0" VerticalAlignment="Top" Width="233" Background="#2A3340">
-            <Button Content="Lekarze" FontStyle="Italic" FontSize="20" Margin="24.2,9.2,24,9.4" FontWeight="Bold" Background="#91BBF2"/>
+            <Button Content="Lekarze" FontStyle="Italic" FontSize="20" Margin="24.2,9.2,24,9.4" FontWeight="Bold" Background="#91BBF2" Click="buttonDoctors"/>
         </Border>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="18" HorizontalAlignment="Left" Height="80" Margin="121,106,0,0" VerticalAlignment="Top" Width="233" Background="#2A3340" RenderTransformOrigin="0.488,1.784">
-            <Button Content="Pacjenci" FontStyle="Italic" FontSize="20" Margin="24.2,9.2,24,9.4" FontWeight="Bold" Background="#91BBF2" />
+            <Button Content="Pacjenci" FontStyle="Italic" FontSize="20" Margin="24.2,9.2,24,9.4" FontWeight="Bold" Background="#91BBF2" Click="buttonPatients"/>
         </Border>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="18" HorizontalAlignment="Left" Height="80" Margin="121,191,0,0" VerticalAlignment="Top" Width="233" Background="#2A3340" RenderTransformOrigin="0.488,1.784">
-            <Button Content="Wizyty" FontStyle="Italic" FontSize="20" Margin="24.2,9.2,24,9.4" FontWeight="Bold" Background="#91BBF2"/>
+            <Button Content="Wizyty" FontStyle="Italic" FontSize="20" Margin="24.2,9.2,24,9.4" FontWeight="Bold" Background="#91BBF2" Click="buttonVisits"/>
         </Border>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="18" HorizontalAlignment="Left" Height="80" Margin="121,276,0,0" VerticalAlignment="Top" Width="233" Background="#2A3340" RenderTransformOrigin="0.488,1.784">
-            <Button Content="Recepty" FontStyle="Italic" FontSize="20" FontWeight="Bold" Margin="24.2,9.2,24,9.4" Background="#91BBF2"/>
+            <Button Content="Recepty" FontStyle="Italic" FontSize="20" FontWeight="Bold" Margin="24.2,9.2,24,9.4" Background="#91BBF2" Click="buttonPrescriptions"/>
         </Border>
 
     </Grid>
