--- a/Przychodnia/LekarzeWindow.xaml
+++ b/Przychodnia/LekarzeWindow.xaml
@@ -5,9 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Przychodnia"
         mc:Ignorable="d"
-        Title="LekarzeWindow" Height="400" Width="800" Background="#8B96D9">
-    <Grid>
-        <DataGrid x:Name="gridDoctors" HorizontalAlignment="Left" Height="60" Margin="390,142,0,0" VerticalAlignment="Top" Width="394" SelectionChanged="ShowDoctors" />
+        Title="LekarzeWindow" Height="400" Width="800" Background="#8B96D9" Loaded="Window_Loaded">
+    <Window.Resources>
+        <local:PrzychodniaDBDataSetVVV x:Key="przychodniaDBDataSetVVV"/>
+        <CollectionViewSource x:Key="lekarzeViewSource" Source="{Binding Lekarze, Source={StaticResource przychodniaDBDataSetVVV}}"/>
+    </Window.Resources>
+    <Grid DataContext="{StaticResource lekarzeViewSource}">
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="18" HorizontalAlignment="Left" Height="80" Margin="53,21,0,0" VerticalAlignment="Top" Width="259" Background="#2A3340">
             <Button Content="Dodaj lekarza" FontStyle="Italic" FontSize="20" Margin="24.2,9.2,24,9.4" FontWeight="Bold" Background="#91BBF2" Click="AddingDoctor"/>
         </Border>
@@ -15,7 +18,7 @@
             <Button Content="Usuń lekarza" FontStyle="Italic" FontSize="20" Margin="24.2,9.2,24,9.4" FontWeight="Bold" Background="#91BBF2" Click="DeleteDoctor"/>
         </Border>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="18" HorizontalAlignment="Left" Height="80" Margin="53,191,0,0" VerticalAlignment="Top" Width="259" Background="#2A3340" RenderTransformOrigin="0.488,1.784">
-            <Button Content="Zaktualizuj lekarza" FontStyle="Italic" FontSize="20" Margin="24.2,9.2,24,9.4" FontWeight="Bold" Background="#91BBF2" />
+            <Button Content="Zaktualizuj lekarza" FontStyle="Italic" FontSize="20" Margin="24.2,9.2,24,9.4" FontWeight="Bold" Background="#91BBF2" Click="UpdateDoctor" />
         </Border>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="18" HorizontalAlignment="Left" Height="80" Margin="53,276,0,0" VerticalAlignment="Top" Width="259" Background="#2A3340" RenderTransformOrigin="0.488,1.784">
             <Button Content="Odśwież" FontStyle="Italic" FontSize="20" FontWeight="Bold" Margin="24.2,9.2,24,9.4" Background="#91BBF2" Click="RefreshDoctors"/>
@@ -29,15 +32,17 @@
         <Label Content="Specjalizacja:" HorizontalAlignment="Left" Margin="390,107,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue" Width="197"/>
         <TextBox x:Name="txtSpecialization" HorizontalAlignment="Left" Height="23" Margin="505,107,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="190" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="18" HorizontalAlignment="Left" Height="48" Margin="675,312,0,0" VerticalAlignment="Top" Width="109" Background="#2A3340" RenderTransformOrigin="0.488,1.784">
-            <Button Content="Powrót" FontStyle="Italic" FontSize="14" FontWeight="Bold" Margin="9.2,9.2,9,9.2" Background="MediumAquamarine" Click="backToMainMenu"/>
+            <Button Content="Powrót" FontStyle="Italic" FontSize="14" FontWeight="Bold" Margin="9.2,9.2,9.2,9.2" Background="MediumAquamarine" Click="backToMainMenu"/>
         </Border>
-        <Label Content="Name:" HorizontalAlignment="Left" Margin="320,210,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
-        <TextBox x:Name="txtName2" HorizontalAlignment="Left" Height="23" Margin="430,214,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
-        <Label Content="Specialization:" HorizontalAlignment="Left" Margin="320,238,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
-        <TextBox x:Name="txtSpecialization2" HorizontalAlignment="Left" Height="23" Margin="430,242,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
-        <Label Content="Qualification:" HorizontalAlignment="Left" Margin="320,269,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
-        <TextBox x:Name="txtSurname2" HorizontalAlignment="Left" Height="23" Margin="430,270,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
-        <Label Content="Age:" HorizontalAlignment="Left" Margin="320,299,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue" Width="103"/>
-        <TextBox x:Name="txtTitle2" HorizontalAlignment="Left" Height="23" Margin="430,300,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+        <DataGrid x:Name="gridDoctors" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="390,155,9.6,63.4" RowDetailsVisibilityMode="VisibleWhenSelected">
+            <DataGrid.Columns>
+                <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" IsReadOnly="True" Width="10"/>
+                <DataGridTextColumn x:Name="imieColumn" Binding="{Binding Imie}" Header="Imie" Width="50"/>
+                <DataGridTextColumn x:Name="nazwiskoColumn" Binding="{Binding Nazwisko}" Header="Nazwisko" Width="100"/>
+                <DataGridTextColumn x:Name="stopienNaukowyColumn" Binding="{Binding StopienNaukowy}" Header="Stopien Naukowy" Width="105"/>
+                <DataGridTextColumn x:Name="specjalizacjaColumn" Binding="{Binding Specjalizacja}" Header="Specjalizacja" Width="111"/>
+            </DataGrid.Columns>
+        </DataGrid>
+
     </Grid>
 </Window>
