--- a/Przychodnia/ReceptyWindow.xaml
+++ b/Przychodnia/ReceptyWindow.xaml
@@ -5,8 +5,44 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Przychodnia"
         mc:Ignorable="d"
-        Title="ReceptyWindow" Height="450" Width="800">
+        Title="PacjenciWindow" Height="400" Width="800" Loaded="Window_Loaded" Background="#8B96D9">
+
+    <Window.Resources>
+        <local:PrzychodniaDBDataSetVVV x:Key="przychodniaDBDataSetVVV"/>
+        <CollectionViewSource x:Key="receptyViewSource" Source="{Binding Recepty, Source={StaticResource przychodniaDBDataSetVVV}}"/>
+    </Window.Resources>
     <Grid>
-        
+        <Grid DataContext="{StaticResource receptyViewSource}">
+            <Border BorderBrush="Black" BorderThickness="1" CornerRadius="18" HorizontalAlignment="Left" Height="80" Margin="53,21,0,0" VerticalAlignment="Top" Width="259" Background="#2A3340">
+                <Button Content="Dodaj receptę" FontStyle="Italic" FontSize="20" Margin="24.2,9.2,24,9.4" FontWeight="Bold" Background="#91BBF2" Click="AddingPrescription"/>
+            </Border>
+            <Border BorderBrush="Black" BorderThickness="1" CornerRadius="18" HorizontalAlignment="Left" Height="80" Margin="53,106,0,0" VerticalAlignment="Top" Width="259" Background="#2A3340" RenderTransformOrigin="0.488,1.784">
+                <Button Content="Usuń receptę" FontStyle="Italic" FontSize="20" Margin="24.2,9.2,24,9.4" FontWeight="Bold" Background="#91BBF2" Click="DeletePrescription"/>
+            </Border>
+            <Border BorderBrush="Black" BorderThickness="1" CornerRadius="18" HorizontalAlignment="Left" Height="80" Margin="53,191,0,0" VerticalAlignment="Top" Width="259" Background="#2A3340" RenderTransformOrigin="0.488,1.784">
+                <Button Content="Zaktualizuj receptę" FontStyle="Italic" FontSize="20" Margin="24.2,9.2,24,9.4" FontWeight="Bold" Background="#91BBF2" Click="UpdateDoctor" />
+            </Border>
+            <Border BorderBrush="Black" BorderThickness="1" CornerRadius="18" HorizontalAlignment="Left" Height="80" Margin="53,276,0,0" VerticalAlignment="Top" Width="259" Background="#2A3340" RenderTransformOrigin="0.488,1.784">
+                <Button Content="Odśwież" FontStyle="Italic" FontSize="20" FontWeight="Bold" Margin="24.2,9.2,24,9.4" Background="#91BBF2" Click="RefreshPrescriptions"/>
+            </Border>
+            <Label Content="ID pacjenta:" HorizontalAlignment="Left" Margin="390,19,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue" Width="166"/>
+            <TextBox x:Name="txtPacjentId" HorizontalAlignment="Left" Height="23" Margin="505,23,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="190" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+            <Label Content="Nazwa recepty::" HorizontalAlignment="Left" Margin="390,47,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue" Width="197"/>
+            <TextBox x:Name="txtReceptaNazwa" HorizontalAlignment="Left" Height="23" Margin="505,51,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="190" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+            <Label Content="Numer recepty" HorizontalAlignment="Left" Margin="390,78,0,0" VerticalAlignment="Top" FontSize="16" FontFamily="Microsoft New Tai Lue" Width="225"/>
+            <TextBox x:Name="txtNumerRecepty" HorizontalAlignment="Left" Height="23" Margin="505,79,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="190" FontSize="16" FontFamily="Microsoft New Tai Lue"/>
+            <Border BorderBrush="Black" BorderThickness="1" CornerRadius="18" HorizontalAlignment="Left" Height="57" Margin="675,299,0,0" VerticalAlignment="Top" Width="109" Background="#2A3340" RenderTransformOrigin="0.488,1.784">
+                <Button Content="Powrót" FontStyle="Italic" FontSize="14" FontWeight="Bold" Margin="9.2,9.2,9.2,9.2" Background="MediumAquamarine" Click="backToMainMenu"/>
+            </Border>
+            <DataGrid x:Name="receptyDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="390,143,39.6,76.4" RowDetailsVisibilityMode="VisibleWhenSelected">
+                <DataGrid.Columns>
+                    <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" IsReadOnly="True" Width="SizeToHeader"/>
+                    <DataGridTextColumn x:Name="pacjent_IDColumn" Binding="{Binding Pacjent_ID}" Header="Pacjent ID" Width="SizeToHeader"/>
+                    <DataGridTextColumn x:Name="nazwaReceptyColumn" Binding="{Binding NazwaRecepty}" Header="Nazwa Recepty" Width="SizeToHeader"/>
+                    <DataGridTextColumn x:Name="numerReceptyColumn" Binding="{Binding NumerRecepty}" Header="Numer Recepty" Width="SizeToHeader"/>
+                </DataGrid.Columns>
+            </DataGrid>
+
+        </Grid>
     </Grid>
 </Window>
